Replace base64 profanity list with Bloom filter
Kids viewing source code could easily decode the base64 word list.
Now uses a Bloom filter (8192 bits, 7 hash functions) which cannot
be reverse-engineered - source only shows binary data.

- Add BloomFilter class with FNV-1a hashing
- Pre-compute filter from 460 word variations (~0.04% false positive rate)
- Update hasProfanity() to tokenize and check against filter
- Add tools/ to .gitignore (build script contains explicit words)

w4ester & ai orchestration

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ Thumbs.db
 
 # Playwright MCP screenshots
 .playwright-mcp/
+
+# Build tools (contains explicit word lists for content filter)
+tools/
