Optimize product images for faster shop loading
- Resize 72 images from 2816x1536 to 600px width
- Create WebP versions (5-15KB each, 99% size reduction)
- Keep compressed PNG as fallback (200-270KB each)
- Update shop-data.js to serve WebP by default
- Add onerror fallback in shop.js for older browsers
- Total savings: 596MB

w4ester & ai orchestration

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ Thumbs.db
 
 # Build tools (contains explicit word lists for content filter)
 tools/
+
+# Original unoptimized images (600MB+ backup)
+images/products-original/
